<resources>
    <string name="fontregular">Quicksand-Regular.ttf</string>
    <string name="fontmedium">Quicksand-Medium.ttf</string>
    <string name="fontbold">Quicksand-Bold.ttf</string>
    <string name="app_name">Ludicon</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="errorMessage">Incorrect email or password</string>
    <string name="pick_image_intent_text"></string>
    <string name="hello_world">LUDICON is here!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1486061805033157</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="dummy_content">LUDICON</string>
    <string name="hello_user">Hi, %1$s!</string>
    <string name="dialogmessage">\tThere is no Internet connection!\n\tPlease go to Settings and activate\n\tWi-Fi or Mobile Data</string>
    <string name="dialogbutton1">Settings</string>
    <string name="dialogbutton2">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ask_preferences">AskPreferences</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_ask_range">AskRange</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_create_new">CreateNewActivity</string>
    <string name="Terms"><a href="http://www.google.com">Terms</a></string>
    <string name="Policy"><a href="http://www.facebook.com">Policy</a></string>
    <string-array name="rankings_array">
        <item>Football</item>
        <item>Volleyball</item>
        <item>Basketball</item>
        <item>Squash</item>
        <item>Ping Pong</item>
        <item>Tennis</item>
        <item>Cycling</item>
        <item>Jogging</item>
        <item>Gym</item>
        <item>Other</item>
    </string-array>
    <string-array name="chooseSex_array">
        <item>M</item>
        <item>F</item>

    </string-array>
    <string-array name="sports_array">
        <item>Football</item>
        <item>Volleyball</item>
        <item>Basketball</item>
        <item>Squash</item>
        <item>Ping Pong</item>
        <item>Tennis</item>
        <item>Cycling</item>
        <item>Jogging</item>
        <item>Gym</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_chat_template">ChatTemplateActivity</string>
    <string name="title_activity_chat_list">ChatListActivity</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_event_details">EventDetails</string>
    <string name="title_activity_rankings">RankingsActivity</string>
    <string name="title_activity_edit_event">EditEventActivity</string>
    <string name="there_is_no_authorised_location_available_yet_for_this_sport">There is no authorised location available yet for this sport</string>
    <string name="or_use_email">Or use email</string>
    <string name="connect_with_facebook">CONNECT WITH FACEBOOK</string>
    <string name="login">LOGIN</string>
    <string name="login1">Login</string>
    <string name="register">REGISTER</string>
    <string name="by_continuing_you_agree_our_nterms_and_privacy_policy">By continuing you agree to our <br/><font color='#d4498b'>Terms</font> &amp; <font color='#d4498b'>Privacy Policy</font></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="enter_your_email_address_below_n_and_we_ll_send_you_password_reset_n_instruction">Enter your email address below   and we\'ll send you password reset   instruction</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="new_you_out_here_florin_cool">New you out here Florin?Cool!</string>
    <string name="we_believe_you_enjoy_ludicon_too_take_a_moment_amp_set_up_your_profile"><![CDATA[Take a moment, set up your profile and get going. You will be able to meet sport people around you very soon.]]></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="save_amp_continue"><![CDATA[SAVE & CONTINUE]]></string>
    <string name="select_what_sports_you_would_like_to_follow">Select what sports you would like to follow</string>
    <string name="football">Football</string>
    <string name="basketball">Basketball</string>
    <string name="volleyball">Volleyball</string>
    <string name="jogging">Jogging</string>
    <string name="gym">Gym</string>
    <string name="cycling">Cycling</string>
    <string name="tennis">Tennis</string>
    <string name="ping_pong">Ping Pong</string>
    <string name="squash">Squash</string>
    <string name="others">Others</string>
    <string name="select_the_area_range_for_activities_around">Select the area range for activities around</string>
    <string name="_20_km">20 Km</string>
    <string name="save_preferences">SAVE PREFERENCES</string>
    <string name="no_activities_around_you">No activities around you!</string>
    <string name="press_the_34_plus_button_34_to_10_create_a_new_activity">Press the \"Plus Button\" to  Create a New Activity</string>
    <string name="will_play">Will play</string>
    <string name="you_will_gain">You will gain \u0020</string>
    <string name="per_hour">\u0020 per hour</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="players">Players</string>
    <string name="join">JOIN</string>
    <string name="no_activities">No activities!</string>
    <string name="discover_38_join_activitiesto_10_or_create_a_new_one_10_by_pressing_the_34_plus_button_34"><![CDATA[Discover & Join Activities or Create a new one\n\t\t\t\t\t\t\t by pressing the \"Plus Button\"]]></string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="activity">ACTIVITY</string>
    <string name="other_sport">OTHER SPORT</string>
    <string name="sport_name">Sport name</string>
    <string name="type_amp_number_of_players"><![CDATA[TYPE & NUMBER OF PLAYERS]]></string>
    <string name="this_activity_is_set_as_private_and_will_not_be_visible_in_the_activity_list_invite_your_friends_to_join_this_activity">This activity is set as Private and will not be visible in the Activity List.Invite your friends to Join this activity</string>
    <string name="date_amp_time"><![CDATA[DATE & TIME]]></string>
    <string name="hour">Hour</string>
    <string name="location1">LOCATION</string>
    <string name="tap_here_to_select_location">Tap here to Select Location</string>
    <string name="enroll_with_a_form">ENROLL WITH A FORM</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enrollment_fields">ENROLLMENT FORM</string>
    <string name="address">Address</string>
    <string name="phone_no">Phone No.</string>
    <string name="add_custom">Add Custom</string>
    <string name="description">DESCRIPTION</string>
    <string name="optional">Optional</string>
    <string name="additional_info">Additional Info</string>
    <string name="invite_friends">INVITE FRIENDS</string>
    <string name="create_activity">CREATE ACTIVITY</string>
    <string name="select_location">SELECT LOCATION</string>
    <string name="as_event_creator_please_make_sure_you_book_the_desired_interval_at_the_selected_sport_venue">As event creator, please make sure you book the desired interval at the selected sport venue!</string>
    <string name="to_create_your_own_location_press_long_tap_on_the_map">To create your own location, press long tap on the map!</string>
    <string name="all">ALL</string>
    <string name="group_chat">GROUP CHAT</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="be_on_top_50_at_the_end_of_the_month_n_and_earn_ludicoins">Be on Top 50 at the end of the month and earn Ludicoins</string>
    <string name="values_are_computed_periodically_so_ranks_are_n_not_real_time">Values are computed periodically, so ranks are   not real-time!</string>
    <string name="_14_days_left">14 days left</string>
    <string name="filter">Filter</string>
    <string name="clear_filter">CLEAR FILTER</string>
    <string name="general">General</string>
    <string name="following">Following</string>
    <string name="apply">APPLY</string>
    <string name="no_conversations_yet">No conversations,yet!</string>
    <string name="discover_amp_join_activities_make_friends_nand_start_chatting"><![CDATA[Discover & join activities,make friends and start chatting!]]></string>
    <string name="discover_activities">DISCOVER ACTIVITIES</string>
    <string name="no_friends_yet">No friends,yet!</string>
    <string name="_12_mutual_friends">12 mutual friends</string>
    <string name="chat">CHAT</string>
    <string name="write_a_message">Write a message...</string>
    <string name="follow">FOLLOW</string>
    <string name="level">Level</string>
    <string name="points">Points</string>
    <string name="position">Position</string>
    <string name="practiced_sports">PRACTICED SPORTS</string>
    <string name="badges">BADGES</string>
    <string name="you">You</string>
    <string name="my_profile">My profile</string>
    <string name="to_next_level">\u0020 to next level</string>
    <string name="statistics">STATISTICS</string>
    <string name="total_activities">Total activities:</string>
    <string name="total_points">Total points:</string>
    <string name="logout">LOGOUT</string>
    <string name="age">Age</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="retype_password">Retype Password</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="no_quests_yet">No quests, yet!</string>
    <string name="come_back_later_join_activities_10_and_gain_ludicoins">Come back later. Exciting quests will be available for you!</string>
    <string name="discount_code">CANCEL QUEST</string>
    <string name="valid_till_20_july_2017">Valid till 20 July 2017</string>
    <string name="_20_off">20% OFF</string>
    <string name="smart_football_club">Smart Football Club</string>
    <string name="use_this_voucher_to_recive_1_off_for_all_football_activities_from_monday_yo_friday">Use this voucher to recive 1% OFF for all football activities from Monday yo Friday</string>
    <string name="use_ludicoins_to_redeem_our_10_partners_prises">Accept a quest and claim your title!</string>
    <string name="browse_quests">BROWSE QUESTS</string>
    <string name="activity1">Activity</string>
    <string name="unfollow">UNFOLLOW</string>
    <string name="are_you_sure_you_want_to_unfollow">Are you sure you want to unfollow</string>
    <string name="player_profile">Player profile</string>
    <string name="around_me">AROUNDE ME</string>
    <string name="get_in_now_only">START QUEST!</string>
    <string name="check_out">CHECK-OUT</string>
    <string name="skip">SKIP</string>
    <string name="block_this_user">Block this user?</string>
    <string name="cancel">Cancel</string>
    <string name="block">Block</string>
    <string name="once_you_block_this_user">Once you block this user, you won\'t be able to receive any messages sent by him!</string>
</resources>