<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/leaderTop"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:background="@drawable/bg_leaderboard_header">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_leaderboard_top"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/topText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/be_on_top_50_at_the_end_of_the_month_n_and_earn_ludicoins"
        android:gravity="center"
        android:textColor="@color/darkblue"/>
    <TextView
        android:id="@+id/valuesRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/values_are_computed_periodically_so_ranks_are_n_not_real_time"
        android:gravity="center"
        android:textColor="@color/darkblue"/>

    <TextView
        android:id="@+id/daysLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="3dp"
        android:text="@string/_14_days_left"
        android:textColor="@color/lightGray" />
</LinearLayout>