<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_modal_gradient">

    <ScrollView
        android:id="@+id/scrollReview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/players"
                android:textColor="#ffffff"
                android:gravity="center"
                android:textSize="18dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@string/fontmedium"
                android:id="@+id/checkInText"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/checkInText"
                android:id="@+id/checkInUser"
                android:orientation="vertical">

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/skip"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/transparent_button"
        android:text="@string/skip"
        android:textColor="#ffffff"
        android:textSize="14dp"
        android:fontFamily="@string/fontmedium"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/skip"
        android:layout_marginEnd="20dp"
        android:background="@drawable/white_button_selector"
        android:text="@string/check_out"
        android:textColor="#d85c97"
        android:textSize="14dp"
        android:fontFamily="@string/fontmedium"/>


</RelativeLayout>