<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f9fc">
    <ImageView
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@drawable/shadow_top_to_bottom"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <include
            android:id="@+id/tool_bar"
            layout="@layout/header_login"
            android:layout_height="56dp"
            android:layout_width="match_parent"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_what_sports_you_would_like_to_follow"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
        >

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gridLayout">


            <RadioButton
                android:id="@+id/football"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:background="#ffffff"
                android:text="@string/football"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:drawableLeft="@drawable/ic_sport_football"
                android:drawableRight="@drawable/ic_check"
                android:button="@null"
                app:layout_column="0"
                app:layout_row="0"
                app:layout_gravity="fill"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="4dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>
            <RadioButton
                android:id="@+id/basketball"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:background="#ffffff"
                android:text="@string/basketball"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:drawableLeft="@drawable/ic_sport_basketball"
                android:drawableRight="@drawable/ic_check"
                android:button="@null"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                app:layout_column="1"
                app:layout_row="0"
                app:layout_gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>
            <RadioButton
                android:id="@+id/volleyball"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:background="#ffffff"
                android:text="@string/volleyball"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:drawableLeft="@drawable/ic_sport_voleyball"
                android:drawableRight="@drawable/ic_check"
                android:button="@null"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="4dp"
                app:layout_column="0"
                app:layout_row="1"
                app:layout_gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>
            <RadioButton
                android:id="@+id/jogging"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:background="#ffffff"
                android:text="@string/jogging"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:drawableLeft="@drawable/ic_sport_jogging"
                android:drawableRight="@drawable/ic_check"
                android:button="@null"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                app:layout_column="1"
                app:layout_row="1"
                app:layout_gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>
            <RadioButton
                android:id="@+id/gym"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:background="#ffffff"
                android:text="@string/gym"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:drawableLeft="@drawable/ic_sport_gym"
                android:drawableRight="@drawable/ic_check"
                android:button="@null"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="4dp"
                app:layout_column="0"
                app:layout_row="2"
                app:layout_gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>
            <RadioButton
                android:id="@+id/cycling"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:background="#ffffff"
                android:text="@string/cycling"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:drawableLeft="@drawable/ic_sport_cycling"
                android:drawableRight="@drawable/ic_check"
                android:button="@null"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                app:layout_column="1"
                app:layout_row="2"
                app:layout_gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>
            <RadioButton
                android:id="@+id/tennis"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:background="#ffffff"
                android:text="@string/tennis"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:drawableLeft="@drawable/ic_sport_tennis"
                android:drawableRight="@drawable/ic_check"
                android:button="@null"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="4dp"
                app:layout_column="0"
                app:layout_row="3"
                app:layout_gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>
            <RadioButton
            android:id="@+id/pingPong"
            android:layout_width="40dp"
            android:layout_height="48dp"
                android:background="#ffffff"
                android:text="@string/ping_pong"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:drawableLeft="@drawable/ic_sport_pingpong"
                android:drawableRight="@drawable/ic_check"
                android:button="@null"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
            app:layout_column="1"
            app:layout_row="3"
            app:layout_gravity="fill"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"/>
            <RadioButton
                android:id="@+id/squash"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:background="#ffffff"
                android:text="@string/squash"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:drawableLeft="@drawable/ic_sport_squash"
                android:drawableRight="@drawable/ic_check"
                android:button="@null"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="4dp"
                app:layout_column="0"
                app:layout_row="4"
                app:layout_gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>
            <RadioButton
                android:id="@+id/others"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:background="#ffffff"
                android:text="@string/others"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:drawableLeft="@drawable/ic_sport_others"
                android:drawableRight="@drawable/ic_check"
                android:button="@null"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                app:layout_column="1"
                app:layout_row="4"
                app:layout_gravity="fill"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"/>
        </android.support.v7.widget.GridLayout>

            <TextView
                android:id="@+id/textViewRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:textSize="16sp"
                android:text="@string/select_the_area_range_for_activities_around"
                android:layout_below="@id/gridLayout"
                />
            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:layout_below="@+id/textViewRange" />
            <TextView
                android:id="@+id/rangeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/_20_km"
                android:layout_below="@+id/seekBar"
                />

        </RelativeLayout>




    </LinearLayout>



    <Button
        android:id="@+id/savePreferincesButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/save_preferences"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:textColor="#ffffff"
        android:textSize="14sp"
        android:layout_marginRight="16dp"
        android:background="@drawable/pink_button_selector"/>







</RelativeLayout>