<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/couponsRelativeLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_background_notselected">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/aroundMeCardLayout"
        android:id="@+id/imageViewBackground"
        android:layout_above="@+id/couponGetIt"/>

    <LinearLayout
        android:id="@+id/dataL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/locationImage"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ph_company" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/fontmedium"
                    android:text="@string/_20_off"
                    android:textColor="#d4498b"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Smart Football Club"
                    android:textColor="#02b9ad"
                    android:textSize="14sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    >

                    <TextView
                        android:id="@+id/pointsToWinCoupons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="And gain 125 "
                        android:textColor="#02b9ad"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/pointsIMV"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_toEndOf="@+id/pointsToWinCoupons"
                        android:src="@drawable/ic_user_points" />
                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@string/fontmedium"
            android:text="@string/use_this_voucher_to_recive_1_off_for_all_football_activities_from_monday_yo_friday"
            android:textColor="@color/darkblue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/validDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@string/fontmedium"
            android:text="@string/valid_till_20_july_2017"
            android:textColor="#400c3855"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/couponGetIt"
        android:layout_width="match_parent"
        android:layout_height="48dp"

        android:background="@drawable/card_button_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/dataL">

        <TextView
            android:id="@+id/getItText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/fontbold"
            android:text="@string/get_in_now_only"
            android:textColor="#ffffff"
            android:textSize="14sp" />

    </LinearLayout>
</RelativeLayout>